@@ -1,3 +1,9 @@
+2008-05-24  James Sharpe <jsharpe@svn.gnome.org>
+
+	* jhbuild/versioncontrol/git.py: Fixed git-svn show-ignore so >>
+	is interpreted correctly by the shell. Only updates exclude file
+	if the svn revision has changed.
+	
 2008-05-24  Wouter Bolsterlee  <wbolster@svn.gnome.org>
 
 	* modulesets/gnome-suites-2.22.modules: libgweather
